[package]
name = "bucket_queue"
version = "2.0.0"
authors = ["Chris Patuzzo <chris@patuzzo.co.uk>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tuzz/bucket_queue"
documentation = "https://github.com/tuzz/bucket_queue"
homepage = "https://crates.io/crates/bucket_queue"
description = "A Bucket Queue data structure that can be used as a Priority Queue."
keywords = ["bucket", "queue", "priority"]
categories = ["data-structures", "algorithms"]

[dependencies]

[dev-dependencies]
bencher = "0.1.5"
rand = "0.6"

[[bench]]
name = "bucket_queue"
harness = false
